--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logic</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/08b0af9dd1.js" crossorigin="anonymous"></script>
+  <title>SpaceX History</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
-    <div class="search-box">
-        <div class="row">
-            <input type="text" id="input-box" placeholder="search" autocomplete="off">
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
-        </div>
-        <div class="result-box">
-        </div>
-    </div>
+  <header>
+    <h1 class="title">SpaceX History</h1>
+    <nav class="navigation">
+      <ul>
+        <li><a href="index.html" class="slide-bar">Launches</a></li>
+        <li><a href="padtests.html" class="slide-bar">Pad Tests</a></li>
+        <li><a href="boosters.html" class="slide-bar">Re-Flown Boosters</a></li>
+        <li><a href="fairings.html" class="slide-bar">Fairings</a></li>
+        <li><a href="capsules.html" class="slide-bar">Capsules</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<script src="autocomplete.js"></script>
+  <main>
+    <h2 class="fade-in">Launches</h2>
+    <section id="launches">
+      <!-- Dynamically generated launch cards will be inserted here -->
+    </section>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
