--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SpaceX History</title>
+  <title>FRC Team 4141</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <header>
-    <h1 class="title">SpaceX History</h1>
+    <h1 class="title">Mater Dei Robotics</h1>
     <nav class="navigation">
       <ul>
         <li><a href="index.html" class="slide-bar">Launches</a></li>
@@ -19,10 +19,6 @@
   </header>
 
   <main>
-    <h2 class="fade-in">Launches</h2>
-    <section id="launches">
-      <!-- Dynamically generated launch cards will be inserted here -->
-    </section>
   </main>
 
 
