--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h1 class="title">Mater Dei Robotics</h1>
     <nav class="navigation">
       <ul>
-        <li><a href="index.html" class="slide-bar">Launches</a></li>
-        <li><a href="padtests.html" class="slide-bar">Pad Tests</a></li>
-        <li><a href="boosters.html" class="slide-bar">Re-Flown Boosters</a></li>
-        <li><a href="fairings.html" class="slide-bar">Fairings</a></li>
-        <li><a href="capsules.html" class="slide-bar">Capsules</a></li>
+        <li><a href="#" class="slide-bar">Launches</a></li>
+        <li><a href="#" class="slide-bar">Pad Tests</a></li>
+        <li><a href="#" class="slide-bar">Re-Flown Boosters</a></li>
+        <li><a href="#" class="slide-bar">Fairings</a></li>
+        <li><a href="#" class="slide-bar">Capsules</a></li>
       </ul>
     </nav>
   </header>
