Changed Link Messages

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h1 class="title">Mater Dei Robotics</h1>
     <nav class="navigation">
       <ul>
-        <li><a href="#" class="slide-bar">Launches</a></li>
-        <li><a href="#" class="slide-bar">Pad Tests</a></li>
-        <li><a href="#" class="slide-bar">Re-Flown Boosters</a></li>
-        <li><a href="#" class="slide-bar">Fairings</a></li>
-        <li><a href="#" class="slide-bar">Capsules</a></li>
+        <li><a href="#" class="slide-bar">Home</a></li>
+        <li><a href="#" class="slide-bar">Robot</a></li>
+        <li><a href="#" class="slide-bar">Awards</a></li>
+        <li><a href="#" class="slide-bar">Events</a></li>
+        <li><a href="#" class="slide-bar">Donate</a></li>
       </ul>
     </nav>
   </header>
