Home Page Complete

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <header>
-    <h1 class="title">Mater Dei Robotics</h1>
+  <header id="header">
+    <h1 class="title">4141 Monarch Robotics</h1>
     <nav class="navigation">
       <ul>
-        <li><a href="#" class="slide-bar">Home</a></li>
+        <li><a href="about.html" class="slide-bar">About</a></li>
         <li><a href="#" class="slide-bar">Robot</a></li>
         <li><a href="#" class="slide-bar">Awards</a></li>
         <li><a href="#" class="slide-bar">Events</a></li>
@@ -19,8 +19,34 @@
   </header>
 
   <main>
+    <div class="image-container">
+      <img src="FrontImg1.jpg" alt="Working">
+      <div class="image-text">
+        <p>Mater Dei High School<br> Robotics Team</p>
+      </div>
+    </div>
+    <div class="image-container">
+      <img src="FrontImg3.jpg" alt="Working">
+      <div class="image-text">
+        <p>First Robotics Competition<br>Team 4141</p>
+      </div>
+    </div>
+    <div class="image-container">
+      <img src="FrontImg5.jpg" alt="Working">
+      <div class="image-text">
+        <p>Gain STEM Experience</p>
+      </div>
+    </div>
+    <div class="image-container">
+      <img src="FrontImg2.jpg" alt="Working">
+      <div class="image-text">
+        <p>Follow our Journey</p>
+      </div>
+      <a href="about.html" class="next">Next ></a>
+    </div>
   </main>
-
+  
+  <script src="script.js"></script>
 
 </body>
 </html>
