added every page

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <nav class="navigation">
       <ul>
         <li><a href="about.html" class="slide-bar">About</a></li>
-        <li><a href="#" class="slide-bar">Robot</a></li>
-        <li><a href="#" class="slide-bar">Awards</a></li>
-        <li><a href="#" class="slide-bar">Events</a></li>
-        <li><a href="#" class="slide-bar">Donate</a></li>
+        <li><a href="robot.html" class="slide-bar">Robot</a></li>
+        <li><a href="awards.html" class="slide-bar">Awards</a></li>
+        <li><a href="events.html" class="slide-bar">Events</a></li>
+        <li><a href="donate.html" class="slide-bar">Donate</a></li>
       </ul>
     </nav>
   </header>
